# Qkinz

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Qkinz.pro  README.md  defaults.pri  qkinz.desktop
.github/workflows/: Ubuntu.yml
app/: app.pro  main.cpp
debian/: changelog  control  rules
resources/: resorces.qrc
resources/Excitation/: README  z10  z11  z12  z13  z14  z15  z16  z17  z18  z19  z2  z20  z21  z22  z23  z24  z25  z26  z27  z28  z29  z3  z30  z31  z32  z33  z34  z35  z36  z37  z38  z39  z4  z40  z41  z42  z43  z44  z45  (+58 more)
resources/media/: Qkinz.icns
resources/text/: about.html  about_qcustomplot.html
scripts/: travis_deploy.sh  travis_osx.sh  travis_qmake.sh
source/: types.h
source/gui/forms/: mainwindow.ui  selectfrontbackform.ui  selecttargetform.ui  selecttelescopeform.ui
source/gui/include/: mainwindow.h  rundialog.h  selectbeamform.h  selecttargetform.h  selecttelescopeform.h
source/gui/src/: mainwindow.cpp  rundialog.cpp  selectbeamform.cpp  selectfrontbackform.cpp  selecttargetform.cpp  selecttelescopeform.cpp
source/kinematics/include/: BetheBlockComp.h  Scattering.h  StoppingPower.h  Ziegler1985.h  ZieglerComp.h
source/kinematics/src/: BetheBlockComp.cpp  FileSP.cpp  Iterative.cpp  Scattering.cpp  Ziegler1985.cpp  ZieglerComp.cpp
source/math/include/: PolyD2.h  Polyfit.h  Polynomial.h  Vector.h
source/math/src/: AbstractFunction.cpp  Matrix.cpp  PolyD2.cpp  Polynomial.cpp  Vector.cpp  spline.cpp
source/matter/src/: Particle.cpp
source/support/include/: runsystem.h  tablemakerhtml.h  worker.h
source/support/src/: runsystem.cpp  tablemakerhtml.cpp  worker.cpp
source/tables/include/: ame2012_mass_tables.h  ame2012_masses.h  ziegler1985_table.h
source/tables/src/: ame2012_mass_tables.cpp  ame2012_masses.cpp
src/: global.h  src.pro  types.h
src/gui/forms/: mainwindow.ui  rundialog.ui  selectbeamform.ui
src/gui/include/: mainwindow.h  rundialog.h  selectfrontbackform.h
src/gui/src/: mainwindow.cpp  mainwindow.ui  rundialog.cpp  selecttargetform.cpp  selecttelescopeform.cpp
src/kinematics/include/: BetheBlock.h  CustomPower.h  DickNorbury.h  FileSP.h  Iterative.h  LNScattering.h  RelScatter.h  StoppingPower.h  Ziegler1985.h
src/kinematics/src/: BetheBlock.cpp  CustomPower.cpp  DickNorbury.cpp  LNScattering.cpp  RelScatter.cpp  StoppingPower.cpp  Ziegler1985.cpp
src/math/include/: AbstractFunction.h  Matrix.h  spline.h
src/math/src/: Polyfit.cpp
src/matter/include/: Material.h  Particle.h
src/matter/src/: Material.cpp  Particle.cpp
src/support/include/: BatchReader.h  tablemakerhtml.h  worker.h
src/support/src/: BatchReader.cpp  runsystem.cpp  tablemakerhtml.cpp  worker.cpp
src/tables/include/: excitation.h
src/tables/src/: excitation.cpp  ziegler1985_table.cpp
tests/: main.cpp  tests.pro
